--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Nunito:wght@300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;600&display=swap');
+
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Chakra Petch", sans-serif;
+  font-family: "DynaPuff", sans-serif;
   text-decoration: none;
 }
 body {
